fix: scrollbar in code block (#164)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -69,3 +69,29 @@
   --bg-gray-dark: 156, 164, 169;
   --bg-gray-light:62, 65, 67;
 }
+
+
+/* Target scrollbars inside prose code blocks */
+.prose pre::-webkit-scrollbar {
+  width: 8px; /* Adjust scrollbar width */
+}
+
+.prose pre::-webkit-scrollbar-track {
+  background: #1f2937; /* Tailwind gray-800 */
+  border-radius: 4px;
+}
+
+.prose pre::-webkit-scrollbar-thumb {
+  background-color: #4b5563; /* Tailwind gray-600 */
+  border-radius: 4px;
+}
+
+.prose pre::-webkit-scrollbar-thumb:hover {
+  background-color: #6b7280; /* Tailwind gray-500 */
+}
+
+/* For Firefox */
+.prose pre {
+  scrollbar-width: thin;
+  scrollbar-color: #6b6b6c #1f2937;
+}
